--- a/MyMayaPlugin/MyMayaPlugin.vcxproj.filters
+++ b/MyMayaPlugin/MyMayaPlugin.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="plugin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
