add smooth for delta mush

--- a/MyMayaPlugin/MyMayaPlugin.vcxproj.filters
+++ b/MyMayaPlugin/MyMayaPlugin.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="mesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="deltamush.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -36,6 +39,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="plugin.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="deltamush.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
