add tight inclusion CCD

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.16)
 project(MyMayaPlugin LANGUAGES CXX)
 
-# 1. C++ standard
+# C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# 2. Maya SDK path 
+# Maya SDK path 
 if(NOT DEFINED MAYA_SDK_ROOT)
 
     if(WIN32)
@@ -49,6 +49,11 @@ add_library(MyMayaPlugin SHARED
     src/mesh.cpp
     src/deltamush.cpp
     src/deltamushnode.cpp
+    src/tight_inclusion/avx.cpp
+    src/tight_inclusion/ccd.cpp
+    src/tight_inclusion/interval.cpp
+    src/tight_inclusion/interval_root_finder.cpp
+    src/tight_inclusion/logger.cpp
 )
 target_compile_definitions(MyMayaPlugin PRIVATE NOMINMAX)
 
@@ -60,18 +65,30 @@ target_sources(MyMayaPlugin PRIVATE
     src/plugin.h
     src/deltamushnode.h
     src/debugdraweroverride.h
+    src/tight_inclusion/avx.hpp
+    src/tight_inclusion/ccd.hpp
+    src/tight_inclusion/interval.hpp
+    src/tight_inclusion/interval_root_finder.hpp
+    src/tight_inclusion/logger.hpp
+    src/tight_inclusion/timer.hpp
+    src/tight_inclusion/types.hpp
 )
 
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 
+# Find spdlog
+find_package(spdlog REQUIRED)
+
 # Add Eigen include directories to your target
 target_link_libraries(MyMayaPlugin PRIVATE Eigen3::Eigen)
 
+target_link_libraries(MyMayaPlugin PRIVATE spdlog::spdlog)
 
-# 4. Build as .mll shared library
+
+# Build as .mll shared library
 set_target_properties(MyMayaPlugin PROPERTIES SUFFIX ".mll")
 
-# 5. Definitions per-configuration
+# Definitions per-configuration
 target_compile_definitions(MyMayaPlugin PRIVATE
     MYMAYAPLUGIN_EXPORTS
     _WINDOWS
@@ -80,7 +97,7 @@ target_compile_definitions(MyMayaPlugin PRIVATE
     $<$<CONFIG:Release>:NDEBUG>
 )
 
-# 6. Link Maya + system libs
+# Link Maya + system libs
 target_link_libraries(MyMayaPlugin PRIVATE
     Foundation.lib
     OpenMaya.lib
@@ -92,19 +109,19 @@ target_link_libraries(MyMayaPlugin PRIVATE
     opengl32.lib
 )
 
-# 7. Compiler flags
+# Compiler flags
 target_compile_options(MyMayaPlugin PRIVATE
     /W3
     /permissive-
 )
 
-# 8. Output dirs per-config
+# Output dirs per-config
 set_target_properties(MyMayaPlugin PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug"
     RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release"
 )
 
-# 9. Pre-/Post-build steps
+# Pre-/Post-build steps
 add_custom_command(TARGET MyMayaPlugin PRE_BUILD
     COMMAND "${MAYA_SDK_ROOT}/bin/mayapy.exe" "${CMAKE_CURRENT_SOURCE_DIR}/src/scripts/Unload.py"
 )
